--- a/redevelop/pretrained/experiments/ss_prediction_bpRNA.yml
+++ b/redevelop/pretrained/experiments/ss_prediction_bpRNA.yml
@@ -5,11 +5,6 @@
 # -----------------------------------------------------------------------------
 # -----------------------------------------------------------------------------
 DATA:
- DATASETS:
-  NAMES: ('custom_seq_L:[1, 1024]_D:[-1,-1]',)
-  #ROOT_DIR: ('/data/chenjiayang/RNA/E2Efold-SS/preprocessed/rnastralign/',)     # 150
-  ROOT_DIR: ('none',)
-
  DATALOADER:
   NUM_WORKERS: 0
   SAMPLER: 'random'
@@ -24,18 +19,21 @@ MODEL:
  DEVICE: "cuda"
  DEVICE_ID: (0,)
  BACKBONE_NAME: "rna-fm"
- SEQWISE_PREDICTOR_NAME: "none"
- ELEWISE_PREDICTOR_NAME: "none"
- PAIRWISE_PREDICTOR_NAME: "none"                        # "self-attention_2_sym_first:r-ss"
- BACKBONE_RANDOM_INITIALIZATION: 0
+ PAIRWISE_PREDICTOR_NAME: "pc-resnet_1_sym_first:r-ss"
  PRETRAINED: 0
- PRETRAINED_MODEL_PATH: './pretrained/esm1b_t33_650M_UR50S.pt'
- BIAS_FREE: 0
- BACKBONE_FROZEN: 1
+ THRESHOLD: 0.47729617
 
-
-METRIC:
- TYPE: 'none'  # top-precision:r-ss
+# -----------------------------------------------------------------------------
+# -----------------------------------------------------------------------------
+# 3.LOSS General Setting. Can be replaced in respective sets Structure Information
+# -----------------------------------------------------------------------------
+# -----------------------------------------------------------------------------
+#LOSS:
+# TYPE: 'bce-logit-masked-loss:r-ss*1'
+# WEIGHT_MODE: "fixed"
+#
+#METRIC:
+# TYPE: 'elewise-classification-report_triu1:r-ss'  # top-precision:r-ss
 
 # -----------------------------------------------------------------------------
 # -----------------------------------------------------------------------------
@@ -43,11 +41,35 @@ METRIC:
 # -----------------------------------------------------------------------------
 # -----------------------------------------------------------------------------
 SOLVER:
- OUTPUT_DIR: "work_space/custom"
+ MAX_EPOCHS: 50
+ EVAL_PERIOD: 1
+ CHECKPOINT_PERIOD: 500
+ LOG_PERIOD: 4000 #500
 
- # APEX
- APEX:
-  OPT_LEVEL: "none" #"none" #"none"     # "O0" "O1" "O2" "O3"
+ # OPTIMIZER
+ OPTIMIZER:
+  NAME: "AdamW"
+  MOMENTUM: 0.9
+  WEIGHT_DECAY: 0.0005
+  WEIGHT_DECAY_BIAS: 0.
+  ACCUMULATION_STEP: 1
+
+ # SCHEDULER
+ SCHEDULER:
+  NAME: "WarmupCosineLR"
+  STEP_UNIT: "epoch"
+  STEP_FREQUENCY: "iteration"
+  BASE_LR: 0.0001
+  BIAS_LR_FACTOR: 1
+  START_FROM_SCRATCH: 1
+  # WARM UP
+  WARMUP_METHOD: "linear"
+  WARMUP_FACTOR: 0.01 #0.33
+  WARMUP_STEPS: 5.0
+  # SPECIFIC
+  GAMMA: 0.1
+  MILESTONES: [10, 15, 20]
+  MAIN_STEPS: 50
 
 # -----------------------------------------------------------------------------
 # -----------------------------------------------------------------------------
@@ -55,6 +77,6 @@ SOLVER:
 # -----------------------------------------------------------------------------
 # -----------------------------------------------------------------------------
 EVAL:
- WEIGHT_PATH: "none"
+ WEIGHT_PATH: "pretrained/Models/SS/RNA-FM-ResNet_bpRNA.pth"
  DATALOADER:
   BATCH_SIZE: -1
